# snapstitch

./: .flake8  .gitattributes  LICENSE  README.md  pyproject.toml
.github/workflows/: cicd.yml  test.yml
src/snapstitch/: __init__.py  data.py  generator.py  stitch.py
tests/: test_data.py
